ZV-524 fix responsive layout issues

--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -161,23 +161,24 @@ table.balance-sheet {
   width: 100%;
   td {
     border-bottom: 1px dashed $color-gray-med-shaded;
+    white-space: normal;
   }
   th {
     border: 0;
     background: transparent;
     text-transform: none;
   }
-  
+
   @include media($mobile) {
     width: 100%;
-    
+
     td {
       display: block;
       width: 100%;
       border: 0;
       margin-bottom: 15px;
     }
-    
+
     tr {
       display: block;
       td:last-child {
